KULRICE-5287: Adding buildExportTableData method call